[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dzp-iac-agent"
version = "1.0.0"
description = "An intelligent Infrastructure as Code agent powered by Claude AI with native tool use for Terraform automation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "DZP IAC Agent", email = "contact@dzp-iac-agent.com"}
]
maintainers = [
    {name = "DZP IAC Agent", email = "contact@dzp-iac-agent.com"}
]
keywords = ["terraform", "iac", "infrastructure-as-code", "claude-ai", "automation", "devops"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
requires-python = ">=3.8"
dependencies = [
    # Core dependencies
    "rich>=13.0.0",
    "pydantic>=2.0.0",

    # Terraform parsing and analysis
    "python-hcl2>=4.0.0",

    # Claude AI SDK (native tool use)
    "anthropic>=0.39.0",

    # Model Context Protocol (MCP)
    "mcp>=1.0.0",

    # File system and process management
    "psutil>=5.9.0",

    # Data handling
    "pyyaml>=6.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "prompt-toolkit>=3.0.0",
    "nest-asyncio>=1.5.0",
    "httpx>=0.27.0",  # For async HTTP requests in MCP
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
tf-agent = "main:main"
dzp-agent = "main:main"

[project.urls]
Homepage = "https://github.com/dzp-iac-agent/dzp-iac-agent"
Documentation = "https://github.com/dzp-iac-agent/dzp-iac-agent#readme"
Repository = "https://github.com/dzp-iac-agent/dzp-iac-agent"
"Bug Tracker" = "https://github.com/dzp-iac-agent/dzp-iac-agent/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build]
include = [
    "src/**/*.py",
    "*.md",
    "*.yml",
    "*.yaml",
    "*.json",
    ".env.example",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

# UV configuration
[tool.uv.sources]

# Development tool configuration
[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"